--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,1 @@
-
-out/artifacts/LearnixProgram_jar/README.md
-out/artifacts/LearnixProgram_jar/README.md
-out/production/LearnixProgram/META-INF (1)/MANIFEST.MF
-src/sample/usersAndGroups/usersAndGroupsController.java
+.idea
